--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ body {
   background: #141E30;
   background: linear-gradient(to bottom, #243B55, #141E30);
   color: white;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Comfortaa', cursive;
   display: flex;
   flex-direction: column;
   align-items: center;
