Updated Client and Controller to use settings from the database for realtime state and info updates.

--- a/public/css/controller.css
+++ b/public/css/controller.css
@@ -246,6 +246,10 @@ button.splash-button.small {
   background: #1C2C42;
 }
 
+.dialog .settingParam {
+  padding: 8px;
+}
+
 /***********************
  * Radio buttons
  ***********************/
