--- a/public/css/client.css
+++ b/public/css/client.css
@@ -1,3 +1,14 @@
+body {
+  color: #ebebeb;
+  font-family: 'Comfortaa', 'cursive';
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  touch-action: manipulation; /* disable double-tap zoom */
+  overscroll-behavior-y: contain;
+}
+}
   
   html, body { height: 100%; }
   html,
@@ -57,6 +68,28 @@
 }
 
 #infoBox {
+}
+
+.splash {
+  font-size: 16px;
+  padding: 20px;
+  line-height: 1.5;
+  margin: auto;
+  text-align: center;
+  overflow: hidden;
+}
+
+.splash img {
+  width: 100px;
+  filter: drop-shadow(0 0 7px #ebebeb77);
+}
+
+.splash a {
+  color: #C77C7C;
+}
+
+.splash #bandy {
+  color: #C77C7C;
 }
 
 button.splash-button {
