--- a/public/css/client.css
+++ b/public/css/client.css
@@ -8,7 +8,6 @@ body {
   touch-action: manipulation; /* disable double-tap zoom */
   overscroll-behavior-y: contain;
 }
-}
   
   html, body { height: 100%; }
   html,
@@ -67,9 +66,6 @@ body {
   position: relative;
 }
 
-#infoBox {
-}
-
 .splash {
   font-size: 16px;
   padding: 20px;
@@ -118,6 +114,15 @@ button.splash-button.small {
   padding: 8px;
   font-size: 12px;
   width: 150px;
+}
+
+.gameChoice {
+  font-size: 16px;
+  padding: 20px;
+  line-height: 1.5;
+  margin: auto;
+  text-align: center;
+  overflow: hidden;
 }
 
 .dialog {
