--- a/public/css/client.css
+++ b/public/css/client.css
@@ -116,6 +116,10 @@ button.splash-button.small {
   width: 150px;
 }
 
+button.join {
+  width: 80%;
+}
+
 .gameChoice {
   font-size: 16px;
   padding: 20px;
@@ -125,23 +129,63 @@ button.splash-button.small {
   overflow: hidden;
 }
 
+.games {
+}
+
+.games input[type="radio"]{
+  opacity: 0;
+  position: fixed;
+  width: 0;
+}
+
+.games label{
+  display: inline-block;
+  color: #C77C7C;
+  cursor: pointer;
+  background-color: transparent;
+  padding: 8px;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: bolder;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  width: 150px;
+  border: 2px solid #C77C7C;
+}
+
+.games input[type="radio"]:checked + label {
+  background-color:#C77C7C;
+  color: black;
+}
+
+.games label:hover {
+  background-color: #C77C7C88;
+  color: black;
+}
+
 #instructions {
   font-weight: 100;
   background: #33333377;
   color: white;
   z-index: 10;
   position: fixed;
-  padding-top: 30px;
   top: 60px;
   height: 100%;
+  padding: 60px 10px;
   left: 50%;
   width: 100%;
-  max-width: 500px;
   transform: translateX(-50%);
   text-align: center;
-  overflow-x: auto;
-  white-space: pre-wrap;
-  word-wrap: break-word;
+  line-height: 1.25;
+  margin: auto;
+  /* overflow-x: auto; */
+  /* white-space: pre-wrap;
+  word-wrap: break-word; */
+}
+
+.url {
+  text-overflow: ellipsis;
 }
 
 .fadeIn {
@@ -212,7 +256,7 @@ button.splash-button.small {
 /***********************
  * Radio buttons
  ***********************/
-.control-indicator {
+/* .control-indicator {
   border: solid #C77C7C 2px;
   color: #C77C7C;
   border-radius: 2px;
@@ -243,7 +287,7 @@ label.radio > .control-indicator {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-}
+} */
 #inputNumButtons { vertical-align: middle; }
 
 canvas {
