--- a/public/css/performer.css
+++ b/public/css/performer.css
@@ -122,7 +122,7 @@ h1 {
   font-size: 40px;
 }
 
-.splash a:link, a:visited {
+a:link, a:visited {
   color: #C77C7C;
 }
 .splash-main b {
@@ -313,6 +313,11 @@ button.splash-button.small {
 .dialog input {
   width: 100%;
 }
+
+.dialog label {
+  margin-right: 4px;
+  margin-bottom: 5px;
+}
 /***********************
  * Radio buttons
  ***********************/
@@ -406,4 +411,45 @@ label.radio > .control-indicator {
 
 .apply button{
   float: right;
+}
+
+.horiz {
+  
+}
+
+.horiz input {
+  display: inline-block;
+  width: 150px;
+}
+
+.radioSet input[type="radio"]{
+  opacity: 0;
+  position: fixed;
+  width: 0;
+}
+
+.radioSet label{
+  display: inline-block;
+  color: #C77C7C;
+  cursor: pointer;
+  background-color: transparent;
+  padding: 8px;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: bolder;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  width: 150px;
+  border: 2px solid #C77C7C;
+}
+
+.radioSet input[type="radio"]:checked + label {
+  background-color:#C77C7C;
+  color: black;
+}
+
+.radioSet label:hover {
+  background-color: #C77C7C88;
+  color: black;
 }
